--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,8 +1,8 @@
 {% extends 'blog/base.html' %}
 {% block content %}
   <div class="row container mt-2 px-3">
-    <h2 class="mb-4 text-center">EXPLORE ALL POSTS OF OUR COMMUNITY!</h2>
-    <hr>
+    <h2 class="mb-4 text-center">EXPLORE ALL POSTS OF OUR COMMUNITY!<hr></h2>
+
     {% for post in posts %}
       <div class="container col-md-3 mb-4 px-3">
         <div class="card h-100 shadow-sm">
