--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-<div class="row container justify-content-center mt-2 px-3">
+<div class="row justify-content-center mt-2 px-3">
   <div class="col-md-8">
     <h2 class="mb-4 text-center">{{ post.title }}</h2>
 
