--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base.html' %}
-{% load widget_tweaks %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <div class="row justify-content-center mt-2">
@@ -16,20 +16,27 @@
           <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
 
-            <div class="mb-3">
-              <label for="id_title" class="form-label">Title</label>
-              {{ form.title|add_class:"form-control" }}
-            </div>
+            {{ form.title|as_crispy_field }}
+            {{ form.content|as_crispy_field }}
 
+            <!-- Immage delete section -->
             <div class="mb-3">
-              <label for="id_content" class="form-label">Content</label>
-              {{ form.content|add_class:"form-control" }}
+              {% if form.instance.image %}
+                <div class="text-center mb-2">
+                  <img src="{{ form.instance.image.url }}" alt="Current Image"
+                       class="img-fluid d-block mx-auto mb-2"
+                       style="max-width: auto; height: auto;">
+                  <div class="form-check d-inline-block">
+                    <input class="form-check-input" type="checkbox" name="image-clear" id="image-clear_id">
+                    <label class="form-check-label" for="image-clear_id">Delete</label>
+                  </div>
+                </div>
+              {% endif %}
+              
+              <!-- Upload Image -->
+              <input type="file" name="image" class="form-control" id="id_image">
             </div>
-
-            <div class="mb-3">
-              <label for="id_image" class="form-label">Image</label>
-              {{ form.image|add_class:"form-control" }}
-            </div>
+            
 
             <div class="d-grid gap-2 d-md-flex">
               <button type="submit" class="btn btn-primary">Save</button>
@@ -49,19 +56,23 @@
       <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
 
-        <div class="mb-3">
-          <label for="id_title" class="form-label">Title</label>
-          {{ form.title|add_class:"form-control" }}
-        </div>
+        {{ form.title|as_crispy_field }}
+        {{ form.content|as_crispy_field }}
 
         <div class="mb-3">
-          <label for="id_content" class="form-label">Content</label>
-          {{ form.content|add_class:"form-control" }}
-        </div>
-
-        <div class="mb-3">
-          <label for="id_image" class="form-label">Image</label>
-          {{ form.image|add_class:"form-control" }}
+          {% if form.instance.image %}
+            <div class="text-center mb-2">
+              <img src="{{ form.instance.image.url }}" alt="Current Image"
+                   class="img-fluid d-block mx-auto mb-2">
+              <div class="form-check d-inline-block">
+                <input class="form-check-input" type="checkbox" name="image-clear" id="image-clear_id">
+                <label class="form-check-label" for="image-clear_id">Delete</label>
+              </div>
+            </div>
+          {% endif %}
+          
+          <!-- Upload Image -->
+          <input type="file" name="image" class="form-control" id="id_image">
         </div>
 
         <div class="d-grid gap-2">
