--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -28,7 +28,7 @@
                        style="max-width: auto; height: auto;">
                   <div class="form-check d-inline-block">
                     <input class="form-check-input" type="checkbox" name="image-clear" id="image-clear_id">
-                    <label class="form-check-label" for="image-clear_id">Delete</label>
+                    <label class="form-check-label" for="image-clear_id">Chieck this box to delete image</label>
                   </div>
                 </div>
               {% endif %}
@@ -66,7 +66,7 @@
                    class="img-fluid d-block mx-auto mb-2">
               <div class="form-check d-inline-block">
                 <input class="form-check-input" type="checkbox" name="image-clear" id="image-clear_id">
-                <label class="form-check-label" for="image-clear_id">Delete</label>
+                <label class="form-check-label" for="image-clear_id">Chieck this box to delete image</label>
               </div>
             </div>
           {% endif %}
